Config file reader pom updated